Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99215

Html popups do not work correctly.

XMLWordPrintable

    • Linux/X11, macOS
    • ba2e26f3d9 (qt/qtwebengine/dev) 69a5a213dd (qt/qtwebengine/6.2) 2947d79d82 (qt/qtwebengine/6.3) 62460e5e0f (qt/qtwebengine/6.2.3) 2947d79d82 (qt/qtwebengine/6.3.0)

      tst_QWebEnginePage::comboBoxPopupPositionAfterMove() and tst_QWebEnginePage::comboBoxPopupPositionAfterChildMove() fail on the CI - 2021 version

      Integrations repeated fail with

      ********* Start testing of tst_QWebEnginePage *********
       FAIL!  : tst_QWebEnginePage::comboBoxPopupPositionAfterMove() '(popup = findNewTopLevelWindow(oldTlws))' returned FALSE. ()
          Loc: [/Users/qt/work/qt/qtwebengine/tests/auto/widgets/qwebenginepage/tst_qwebenginepage.cpp(1318)]
       FAIL!  : tst_QWebEnginePage::comboBoxPopupPositionAfterChildMove() '(popup = findNewTopLevelWindow(oldTlws))' returned FALSE. ()
          Loc: [/Users/qt/work/qt/qtwebengine/tests/auto/widgets/qwebenginepage/tst_qwebenginepage.cpp(1380)]
      

      Examples:

        1. image-2022-03-01-11-02-13-020.png
          image-2022-03-01-11-02-13-020.png
          12 kB
        2. untitled.7z
          165 kB
        3. screenshot-1.png
          screenshot-1.png
          34 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            michal Michal Klocek
            mmutz Marc Mutz
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: